// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2 should render (snapshot) 1`] = `
<DocumentFragment>
  <h2
    class="scroll-m-20 text-2xl md:text-3xl xl:text-4xl"
  >
    Test Typography
  </h2>
</DocumentFragment>
`;

exports[`P should render (snapshot) 1`] = `
<DocumentFragment>
  <p
    class="text-lg md:text-xl xl:text-2xl"
  >
    Test Typography
  </p>
</DocumentFragment>
`;
